<resources>
    <string name="app_name">Practica5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="lista_fragment_label">Lista Tareas</string>
    <string name="tarea_fragment_label">Tarea</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="categoria">Categoria</string>
    <string name="prioridad">Prioridad</string>


    <string-array name="categoria">
        <item>Reparación</item>
        <item>Instalación</item>
        <item>Mantenimiento</item>
        <item>Comercial</item>
        <item>otros</item>
    </string-array>

    <string-array name="prioridad">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>

    <string name="mensaje_categoria">Has seleccionado %1$s como categoría</string>
    <string name="pagado">Pagado</string>
    <string name="estado_de_la_tarea">Estado De La Tarea</string>
    <string name="abierta">Abierta</string>
    <string name="en_curso">En Curso</string>
    <string name="cerrada">Cerrada</string>

    <string name="horas_trabajadas">Llevo %1$d horas trabajadas</string>
    <string name="tecnico">Tecnico</string>


</resources>