<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clytTarea"
    tools:context=".ui.TareaFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrioridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prioridad"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />

    <Spinner
        android:id="@+id/spCategoria"
        android:layout_width="265dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCategoria"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spPrioridad"
        android:layout_width="265dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/tvPrioridad"
        app:layout_constraintTop_toBottomOf="@+id/spCategoria" />

    <ImageView
        android:id="@+id/ivPagado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_pagado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrioridad" />

    <Switch
        android:id="@+id/swPagado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/pagado"
        app:layout_constraintStart_toEndOf="@+id/ivPagado"
        app:layout_constraintTop_toBottomOf="@+id/tvPrioridad" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/estado_de_la_tarea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPagado" />

    <RadioGroup
        android:id="@+id/rgEstado"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado">

        <RadioButton
            android:id="@+id/rbAbierta"
            android:layout_width="92dp"
            android:layout_height="50dp"
            android:text="@string/abierta" />

        <RadioButton
            android:id="@+id/rbEnCurso"
            android:layout_width="92dp"
            android:layout_height="50dp"
            android:text="@string/en_curso" />

        <RadioButton
            android:id="@+id/rbCerrada"
            android:layout_width="92dp"
            android:layout_height="50dp"
            android:text="@string/cerrada" />
    </RadioGroup>

    <ImageView
        android:id="@+id/ivEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_encurso"
        app:layout_constraintBottom_toTopOf="@+id/rgEstado"
        app:layout_constraintStart_toEndOf="@+id/tvEstado" />

    <SeekBar
        android:id="@+id/sbHoras"
        android:layout_width="197dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:max="30"
        android:progressTint="@color/VerdeClaro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvHoras"
        app:layout_constraintTop_toTopOf="@+id/rgEstado" />

    <TextView
        android:id="@+id/tvHoras"
        android:layout_width="182dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/horas_trabajadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgEstado" />

    <RatingBar
        android:id="@+id/rbValoracion"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:rating="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHoras" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbValoracion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTecnico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tecnico" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>